...

    <!-- AlertDialogCreateSummary -->
    <string name="subtitle_create_summary">É preciso cadastrar o sumário do mês antes de adicionar um item a lista.</string>

    <!-- CardItemPayble -->
    <string name="choose_icon_item">icone escolhido: %1$s</string>
    <string name="price_item">%1$s %2$s</string>
    <string name="icon_deadline">Icone de Vencimento da Conta</string>
    <string name="day_deadline">Vencimento: %1$s</string>
    <string name="icon_description">Icone de Descrição da Conta</string>
    <string name="description_item">Descrição: %1$s</string>
    <string name="icon_group_people">Icone de Grupo de Pessoas</string>
    <string name="group_people_text">Dividido com:</string>
    <string name="group_people_status">Pago?</string>
    <string name="icon_people">Icone de Pessoa</string>

    <!-- AlertDialogCreateSummary -->
    <string name="subtitle_summary">Ao deletar o sumário todos os itens também serão deletados. Você tem certeza?</string>

    <!-- CardSummary -->
    <string name="summary_title_without">Sumário mensal</string>
    <string name="summary_title">Sumário</string>
    <string name="summary_month_year">%1$s/%2$s</string>
    <string name="summary_receipt">Receita: %1$s</string>
    <string name="icon_summary_receipt">Icone de Receita</string>
    <string name="icon_summary_expenditure">Icone de Despesa</string>
    <string name="summary_expenditure">Despesas: %1$s</string>
    <string name="icon_remaining_revenue">Icone de Receita Restante</string>
    <string name="summary_remaining">Restante: %1$s</string>
    <string name="summary_value">Valor</string>
    <string name="summary_pay">Pago</string>

    <!-- TopBar -->
    <string name= "topbar_calendar">Calendário</string>
    <string name= "topbar_more_itens">Mais itens</string>
...
    <string name="bottomsheet_item_name_person4_item_tag" translatable="false">bottomsheet_item_name_person4_item_tag</string>
    <string name="bottomsheet_item_name_btn_delete_item_tag" translatable="false">bottomsheet_item_name_btn_delete_item_tag</string>
    <string name="bottomsheet_item_name_btn_edit_item_tag" translatable="false">bottomsheet_item_name_btn_edit_item_tag</string>
    <string name="bottomsheet_item_btn_save_tag" translatable="false">bottomsheet_item_btn_save_tag</string>
    <string name="bottomsheet_calendar_month_btn_tag" translatable="false">bottomsheet_calendar_month_btn_tag</string>
    <string name="bottomsheet_calendar_year_btn_tag" translatable="false">bottomsheet_calendar_year_btn_tag</string>
    <string name="bottomsheet_calendar_month_item_tag" translatable="false">bottomsheet_calendar_month_%1$s_tag</string>
    <string name="bottomsheet_calendar_year_item_tag" translatable="false">bottomsheet_calendar_year_%1$s_tag</string>
    <string name="bottomsheet_calendar_btn_save_tag" translatable="false">bottomsheet_calendar_btn_save_tag</string>
    <string name="topbar_calendar_icon_tag" translatable="false">topbar_calendar_icon</string>
    <string name="card_summary_non_exist_btn_create_tag" translatable="false">card_summary_non_exist_btn_create</string>
    <string name="card_summary_exist_btn_edit_tag" translatable="false">card_summary_exist_btn_edit_tag</string>
    <string name="card_summary_exist_btn_delete_tag" translatable="false">card_summary_exist_btn_delete_tag</string>
    <string name="bottomsheet_summary_revenue_tag" translatable="false">bottomsheet_summary_revenue_tag</string>
    <string name="bottomsheet_summary_person1_tag" translatable="false">bottomsheet_summary_person1_tag</string>
    <string name="bottomsheet_summary_person2_tag" translatable="false">bottomsheet_summary_person2_tag</string>
...
